
subprojects {
    apply plugin: 'checkstyle'
    apply plugin: 'java'
    apply plugin: 'jacoco'

    version System.getenv('RELEASE_VERSION')?.replace('refs/tags/', '') ?: 'DEV-SNAPSHOT'

    compileJava   {
        sourceCompatibility = 11
        targetCompatibility = 11
    }

    checkstyle {
        maxWarnings = 0
        toolVersion '8.29'
        sourceSets = [project.sourceSets.main]
    }

    jacocoTestReport {
        reports {
            html.enabled true
        }
    }
}
